--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
     "@rollup/plugin-node-resolve": "^7.1.3",
+    "bl": ">=0.9.5",
     "cross-env": "^7.0.2",
     "rollup": "^2.6.1",
     "rollup-plugin-babel": "^4.4.0",
@@ -22,8 +23,7 @@
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-sourcemaps": "^0.5.0",
     "rollup-plugin-uglify": "^6.0.4",
-    "serve": "^11.3.0",
-    "bl": ">=0.9.5"
+    "serve": "^11.3.2"
   },
   "dependencies": {
     "eventemitter3": "^4.0.0"
